--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     font-family: "Pretendard",serif;
 }
             body { 
-                background-color: #9966CC; 
+                background-color: #092869; 
             }
             .profile {
                 width: 100px;
@@ -64,7 +64,7 @@
 
                 font-size: 14px;
                 font-weight: bold;
-                color: #44398A;
+                color: #092869;
 
                 display: flex; 
                 flex-direction: column;
@@ -73,7 +73,7 @@
                 
                 text-decoration: none;
 
-                box-shadow: 2px 4px 4px 0px #333333;
+                box-shadow: 2px 4px 4px 0px #969696;
             }
             .wrap > a:hover {
                 background-color: #f2f2f2;
