--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta property="og:title" content="NIPA INFO-SEC ROADMAP" />
         <meta property="og:description" content="정보통신산업진흥원의 개인정보보호 로드맵" />
-        <meta property="og:image" content="chungseong.jpg" />
+        <meta property="og:image" content="chungseong.JPG" />
         <title>NIPA INFO-SEC ROADMAP</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -24,7 +24,7 @@
                 
                 border : 5px solid white;
 
-                background-image: url('chungseong.jpg');
+                background-image: url('chungseong.JPG');
                 background-position: center;
                 background-size: cover;
             }
