--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="내 정보는 Lock하고 안전하게 Roll" />
         <meta property="og:description" content="내정보지킴이 캠페인" />
         <meta property="og:image" content="rocknroll.jpg" />
-        <title>개인정보 Lock n Roll</title>
+        <title>개인정보 Lock'n'Roll</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 * {
@@ -84,7 +84,7 @@
     <body>
         <div class="wrap">
             <div class="profile"></div>
-            <h1 class="main">개인정보, Lock n Roll</h1>
+            <h1 class="main">개인정보, Lock'n'Roll</h1>
             <p class="sub">🤘</p>
 
             <a target="_blank" href="https://kidc.eprivacy.go.kr/">털린 내 정보 찾기</a>
