--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
             <h1 class="main">개인정보, Lock'n'Roll</h1>
             <p class="sub">🤘</p>
 
-            <a target="_blank" href="https://kidc.eprivacy.go.kr/">털린 내 정보 찾기</a>
-            <a target="_blank" href="https://litt.ly/pipd">캠페인 구경하기</a>
-            <a target="_blank" href="https://www.youtube.com/live/FDSNuNvECS0?si=StoWrjMqhFliY7yI">개인정보 보호의날 행사 참석하기</a>
-            <a target="_blank" href="https://nipatools.gov-dooray.com/drive/3626355896048548390">개인정보 처리업무 절차서 다운받기</a>
+            <a target="_blank" href="https://kidc.eprivacy.go.kr/">🕵️‍♀️털린 내 정보 찾기</a>
+            <a target="_blank" href="https://www.privacy.go.kr/delete.do">👶우리 아이 디지털 잊힐권리 신청하기</a>
+            <a target="_blank" href="https://litt.ly/pipd">🤹‍♀️내정보지킴이 캠페인 구경하기</a>
+            <a target="_blank" href="https://www.youtube.com/live/FDSNuNvECS0?si=StoWrjMqhFliY7yI">🎫개인정보 보호의날 행사 참석하기</a>
+            <a target="_blank" href="https://nipatools.gov-dooray.com/drive/3626355896048548390">📜개인정보 처리업무 절차서 다운받기</a>
 
 
 
